fixed spacing and added logo

--- a/moodify/src/app/globals.css
+++ b/moodify/src/app/globals.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+body {
+  height: 100%;
+  width: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
