--- a/moodify/src/app/page.module.css
+++ b/moodify/src/app/page.module.css
@@ -3,10 +3,8 @@
 .page {
   background-color: #FBFEF4;
   position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   overflow: auto;
   display: flex;
   justify-content: center;
@@ -15,16 +13,17 @@
 .pageGreen {
   background-color: #69B578;;
   position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   overflow: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
 .main {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -135,6 +134,13 @@
 
 .loginSignupButton:active {
   transform: scale(0.98);
+}
+
+.logoHeader {
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    margin-left: 6px;
 }
 
 
